2000-02-08  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4. Formatting changes.
	* acspecific.m4: Likewise.

2000-02-08  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_CONFIG_HEADERS, AC_CONFIG_LINKS,
	AC_CONFIG_SUBDIRS): A space was missing to separate the arguments
	of m4_append.

2000-02-08  Akim Demaille  <akim@epita.fr>

	Arrange that config.status creates the file with the AC_SUBSTing
	engine only if needed.

	* acgeneral.m4 (AC_OUTPUT_FILES): Create the sed code only if test
	-n "$CONFIG_FILES".

2000-02-08  Akim Demaille  <akim@epita.fr>

	Promote AC_LANG_CASE.

	* acgeneral.m4 (AC_TRY_COMPILER, AC_TRY_LINK_FUNC, AC_CHECK_LIB,
	AC_TRY_COMPILE, AC_TRY_LINK, AC_TRY_RUN_NATIVE, AC_CHECK_FUNC):
	Use AC_LANG_CASE instead of ifelse (AC_LANG, ...).
	(AC_TRY_LINK_FUNC): Quote the body the the AC_DEFUN (whoa, how
	could this survive so long?!?).

2000-02-08  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4: Formatting changes.
	* acspecific.m4: Likewise.

2000-02-08  Akim Demaille  <akim@epita.fr>

	Use the style we promote.

	* doc/autoconf.texi (Header Templates): Promote #if over #ifdef;
	and #undef over #define in templates.
	* acspecific.m4 (AC_DECL_SYS_SIGLIST, AC_FUNC_MMAP,
	AC_FUNC_SETPGRP, AC_FUNC_VFORK, AC_FUNC_SELECT_ARGTYPES): Use #if,
	not #ifdef and #ifndef, indent CPP directives.

2000-02-08  Akim Demaille  <akim@epita.fr>

	Quote properly AC_SHELL_IFELSE and callers.

	* acgeneral.m4 (AC_SHELL_IFELSE): Don't overquote $1.
	(AC_VAR_IF_SET, AC_CHECK_MEMBER, AC_CHECK_LIB, AC_CHECK_HEADER,
	AC_CHECK_DECL, AC_CHECK_FUNC, AC_CHECK_TYPE_INTERNAL): Quote the
	first argument of AC_SHELL_IFELSE.

2000-02-08  Akim Demaille  <akim@epita.fr>

	It seems quite delicate to have AC_INCLUDES_DEFAULT insert the
	default headers in the INIT section of configure: the reason is
	that AC_INCLUDES_DEFAULT is called unquoted, and this results in
	an un expected behavior.  Thanks to Roman V. Shaposhnick for the
	details.
