@@ -1,5 +1,11 @@
 2000-02-08  Akim Demaille  <akim@epita.fr>
 
+	* acgeneral.m4 (ac_includes_default): Don't use simple quotes, but
+	doubles quotes if you want to use \-continuation lines: this is
+	not recognized by MIPS' sh.
+
+2000-02-08  Akim Demaille  <akim@epita.fr>
+
 	* acgeneral.m4. Formatting changes.
 	* acspecific.m4: Likewise.
 
